# Pytest-CPPython

./: pyproject.toml
pytest_cppython/: fixtures.py  mock.py  plugin.py  shared.py  tests.py
pytest_cppython/fixture_data/: configuration.py  cppython.py  pep621.py
pytest_cppython/mock/: generator.py  interface.py  provider.py  scm.py  vcs.py
tests/: data.py
tests/integration/: test_generator.py  test_interface.py  test_provider.py  test_scm.py  test_version_control.py
tests/unit/: test_generator.py  test_interface.py  test_provider.py  test_scm.py  test_version_control.py
